--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                     <strong>OMO G Trading and Interior Decoration</strong>
                     was founded with a vision to transform ordinary spaces into extraordinary experiences. Established in 
                     <span class="location-highlight">Lagos, Nigeria</span>, and now headquartered in the heart of 
-                    <span class="location-highlight">Doha, Qatar</span>, the company has grown into a trusted name in interior and exterior design—recognized for exceptional craftsmanship, innovative solutions, and client-focused delivery.
+                    <span class="location-highlight">Doha, Qatar</span>, the company has grown into a trusted name in interior and exterior design, recognized for exceptional craftsmanship, innovative solutions, and client focused delivery.
                 </p>
                 <p>
                     With over five years of industry experience and more than 67 successfully completed projects, OMO G prides itself on meticulous attention to detail, creative excellence, and unwavering commitment to client satisfaction. Our multidisciplinary team blends strong local market knowledge with international design trends to craft spaces that are both elegant and highly functional.
@@ -132,11 +132,10 @@
             <div class="ceo-text">
                 <h3>Mrs Omoefe Eguriase</h3>
                 <p class="ceo-title">Chief Executive Officer & Founder</p>
-                <p>Mrs Omoefe Eguriase is an experienced and enthusiastic interior design professional with a passion for transforming spaces into works of art. With a keen eye for detail and a deep understanding of both contemporary and traditional design principles, she has built OMO G Trading And Interior Decoration into one of Qatar's most trusted interior decoration companies.</p>
-                <p>Her innovative approach combines functionality with aesthetic beauty, ensuring every project reflects the unique personality and needs of her clients. Under her leadership, the company has successfully completed numerous residential and commercial projects across Qatar, earning a reputation for excellence and customer satisfaction.</p>
+                <p>Mrs Omoefe Eguriase is an experienced and enthusiastic interior design professional with a passion for transforming spaces into works of art. With a keen eye for detail and a deep understanding of both contemporary and traditional design principles, she has built OMO G Trading And Interior Decoration into one of Qatar and Nigeria most trusted interior decoration companies.</p>
+                <p>Her innovative approach combines functionality with aesthetic beauty, ensuring every project reflects the unique personality and needs of her clients. Under her leadership, the company has successfully completed numerous residential and commercial projects across Qatar and Nigeria, earning a reputation for excellence and customer satisfaction.</p>
                 <div class="ceo-social">
                     <a href="/cdn-cgi/l/email-protection#b1d2d4def1dedcded6d8dfc5d4c3d8dec3c29fd2dedc" class="social-btn social-email">📧 Contact CEO</a>
-                    <a href="https://www.instagram.com/_____omoefe?igsh=b3RxYnZrYnF4Mnp0" target="_blank" class="social-btn social-instagram">📱 Instagram</a>
                 </div>
             </div>
         </div>
@@ -160,7 +159,7 @@
             <div class="value-card">
                 <div class="value-icon">💡</div>
                 <h3>Innovation</h3>
-                <p>We embrace creativity and cutting-edge design trends to deliver unique solutions.</p>
+                <p>We embrace creativity and cutting edge design trends to deliver unique solutions.</p>
             </div>
             <div class="value-card">
                 <div class="value-icon">❤️</div>
@@ -186,7 +185,7 @@
                 <img src="https://images.unsplash.com/photo-1615529328331-f8917597711f?w=800&q=80" alt="Luxury Materials">
                 <div class="philosophy-content">
                     <h3>Premium Materials</h3>
-                    <p>Every project features carefully selected high-quality materials, from natural stone to custom woodwork, ensuring lasting beauty.</p>
+                    <p>Every project features carefully selected high quality materials, from natural stone to custom woodwork, ensuring lasting beauty.</p>
                 </div>
             </div>
             <div class="philosophy-item">
