--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@ class="address-link">
 <div class="contact-icon">📱</div>
 <h3>Follow Us</h3>
 <p>Stay updated with our latest projects</p>
-<a href="https://www.instagram.com/_____omoefe?igsh=b3RxYnZrYnF4Mnp0" target="_blank">@_____omoefe</a>
+<a href="https://www.instagram.com/omogbackup?igsh=d3djYTNzZ3R1bGNh" target="_blank">@omogbackup</a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">🕐</div>
