--- a/contact.html
+++ b/contact.html
@@ -154,12 +154,13 @@ class="address-link">
 <div class="contact-icon">📱</div>
 <h3>Follow Us</h3>
 <p>Stay updated with our latest projects</p>
-<a href="https://www.instagram.com/omogbackup?igsh=d3djYTNzZ3R1bGNh" target="_blank">@omogbackup</a>
+<a href="https://www.instagram.com/omogbackup?igsh=d3djYTNzZ3R1bGNh" target="_blank" style="display: block; margin-bottom: 8px;">Instagram: @omogbackup</a>
+<a href="https://www.tiktok.com/@omog_decor?_r=1&_t=ZS-93S5nfYera9" target="_blank" style="display: block;">TikTok: @omog_decor</a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">🕐</div>
 <h3>Business Hours</h3>
-<p style="color: #666;">Saturday - Thursday<br>8:00 AM - 6:00 PM<br>Friday: Closed</p>
+<p style="color: #666;">Saturday - Thursday<br>10:00 AM - 6:00 PM<br>Friday: Closed</p>
 </div>
 </div>
 </section>
