--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                 <p>Mrs Omoefe Eguriase is an experienced and enthusiastic interior design professional with a passion for transforming spaces into works of art. With a keen eye for detail and a deep understanding of both contemporary and traditional design principles, she has built OMO G Trading And Interior Decoration into one of Qatar and Nigeria most trusted interior decoration companies.</p>
                 <p>Her innovative approach combines functionality with aesthetic beauty, ensuring every project reflects the unique personality and needs of her clients. Under her leadership, the company has successfully completed numerous residential and commercial projects across Qatar and Nigeria, earning a reputation for excellence and customer satisfaction.</p>
                 <div class="ceo-social">
-                    <a href="/cdn-cgi/l/email-protection#b1d2d4def1dedcded6d8dfc5d4c3d8dec3c29fd2dedc" class="social-btn social-email">📧 Contact CEO</a>
+                    <a href="mailto:ceo@omoginteriors.com" class="social-btn social-email">📧 Contact CEO</a>
                 </div>
             </div>
         </div>
@@ -168,6 +168,40 @@
             </div>
         </div>
     </section>
+    
+    <section style="background: #f9f9f9; padding: 60px 6%;">
+        <div class="section-header">
+            <h2>Fully Licensed & Compliant</h2>
+            <p>Your trusted partner for professional interior design in Qatar and Nigeria</p>
+        </div>
+        <div class="trust-badges" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
+            <div class="trust-item" style="text-align: center; padding: 30px; background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                <div style="font-size: 48px; margin-bottom: 15px;">🏢</div>
+                <h3 style="color: var(--primary-color); margin-bottom: 10px;">CR No: 235664</h3>
+                <p style="color: #666; font-size: 0.95rem;">Registered in Qatar</p>
+            </div>
+            <div class="trust-item" style="text-align: center; padding: 30px; background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                <div style="font-size: 48px; margin-bottom: 15px;">🏢</div>
+                <h3 style="color: var(--primary-color); margin-bottom: 10px;">RN: 6890696</h3>
+                <p style="color: #666; font-size: 0.95rem;">Registered in Nigeria</p>
+            </div>
+            <div class="trust-item" style="text-align: center; padding: 30px; background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                <div style="font-size: 48px; margin-bottom: 15px;">🌍</div>
+                <h3 style="color: var(--primary-color); margin-bottom: 10px;">Multi-Regional</h3>
+                <p style="color: #666; font-size: 0.95rem;">Operating in Qatar & Nigeria</p>
+            </div>
+            <div class="trust-item" style="text-align: center; padding: 30px; background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                <div style="font-size: 48px; margin-bottom: 15px;">✓</div>
+                <h3 style="color: var(--primary-color); margin-bottom: 10px;">QCS Certified</h3>
+                <p style="color: #666; font-size: 0.95rem;">Qatar Construction Standards</p>
+            </div>
+        </div>
+        <div style="text-align: center; margin-top: 40px;">
+            <p style="color: #666; margin-bottom: 20px;">All projects delivered in full compliance with regulatory requirements</p>
+            <a href="services.html#compliance" class="btn-primary" style="display: inline-block; padding: 12px 30px; background: var(--primary-color); color: white; text-decoration: none; border-radius: 5px; transition: all 0.3s ease;">View Full Compliance Details</a>
+        </div>
+    </section>
+
     <section>
         <div class="section-header">
             <h2>Our Design Philosophy</h2>
