--- a/services.html
+++ b/services.html
@@ -282,7 +282,7 @@
             </div>
         </div>
     </section>
-    <section class="qatar-compliance">
+    <section class="qatar-compliance" id="compliance">
         <div class="section-header">
             <h2>Regulatory Compliance & Approvals</h2>
             <p>Delivering every project in accordance with Qatar laws and construction standards</p>
@@ -351,7 +351,7 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="contact.html">Book Now</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
