--- a/renovations.html
+++ b/renovations.html
@@ -186,18 +186,18 @@
 
     <section class="before-after-section">
         <div class="renovation-category">
-            <div class="category-title"><h3>🍳 Kitchen Renovations</h3><p>Modern style and functionality</p></div>
+            <div class="category-title"><h3>🍳 Livingroom Renovations</h3><p>Modern style and functionality</p></div>
             <div class="before-after-container">
                 <div class="before-after-item">
                     <div class="comparison-images">
-                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?w=800" alt="Kitchen Before"></div>
-                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="https://images.unsplash.com/photo-1556912173-46c336c7fd55?w=800" alt="Kitchen After"></div>
+                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="lagos1.jpg" alt="Livingroom Before"></div>
+                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="lagos2.jpg" alt="Livingroom After"></div>
                     </div>
                     <div class="project-info">
-                        <h4>Modern Kitchen Transformation</h4>
+                        <h4>Modern Living Room Transformation</h4>
                         <p>Complete remodel with custom cabinetry and marble countertops.</p>
                         <div class="project-details">
-                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Doha, Qatar</span></div>
+                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Lagos, Nigeria</span></div>
                             <div class="detail-item"><span class="detail-label">Duration:</span><span class="detail-value">3 Weeks</span></div>
                         </div>
                     </div>
@@ -230,14 +230,14 @@
             <div class="before-after-container">
                 <div class="before-after-item">
                     <div class="comparison-images">
-                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800" alt="Living Before"></div>
-                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=800" alt="Living After"></div>
+                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="ibadan1.jpg" alt="Living Before"></div>
+                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="ibadan2.jpg" alt="Living After"></div>
                     </div>
                     <div class="project-info">
                         <h4>Contemporary Living Room</h4>
                         <p>Open-plan design with modern furnishings and lighting.</p>
                         <div class="project-details">
-                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Doha, Qatar</span></div>
+                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Ibadan, Nigeria</span></div>
                             <div class="detail-item"><span class="detail-label">Duration:</span><span class="detail-value">4 Weeks</span></div>
                         </div>
                     </div>
