--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@ margin: 0 auto;
 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar"
 target="_blank"
 class="address-link">
-                    Office 70, 2nd Floor Block E,<br>
+                    Office 70, 2nd Floor Block F,<br>
                     Al Mirqab Al Jadeed St, Doha
 </a>
 </div>
@@ -175,7 +175,7 @@ class="address-link">
 <p>📧 <a href="mailto:info@omoginteriors.com" style="text-decoration:none; color:inherit;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="text-decoration:none; color:inherit;">
-                    Office 70, 2nd Floor Block E,<br>
+                    Office 70, 2nd Floor Block F,<br>
                     Al Mirqab Al Jadeed St, Doha
 </a></p>
 </div>
@@ -213,7 +213,7 @@ class="address-link">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block E, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+<p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
 </div>
 <div class="footer-bottom">
