--- a/booking.html
+++ b/booking.html
@@ -299,8 +299,8 @@
                 </div>
 
                 <p>Drop by our office in Doha</p>
-                <a href="https://maps.google.com/?q=Office+70,+2nd+Floor+Block+E,+Al+Mirqab+Al+Jadeed+St,+Doha" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
-                    Office 70, 2nd Floor Block E,<br>
+                <a href="https://maps.google.com/?q=Office+70,+2nd+Floor+Block+F,+Al+Mirqab+Al+Jadeed+St,+Doha" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
+                    Office 70, 2nd Floor Block F,<br>
                     Al Mirqab Al Jadeed St, Doha
                 </a>
             </div>
@@ -340,7 +340,7 @@
                 <h3>Contact Info</h3>
                 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
                 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-                <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+                <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
             </div>
         </div>
         <div class="footer-bottom">
