--- a/renovations.html
+++ b/renovations.html
@@ -184,6 +184,41 @@
         </div>
     </section>
 
+    <div class="renovation-category">
+    <div class="category-title">
+        <h3>🪜 Staircase & Entrance Renovations</h3>
+        <p>Transforming structural spaces into stunning architectural statements</p>
+    </div>
+    <div class="before-after-container">
+        <div class="before-after-item">
+            <div class="comparison-images">
+                <div class="comparison-image">
+                    <span class="image-label before-label">BEFORE</span>
+                    <img src="stair.jpg" alt="Staircase Before">
+                </div>
+                <div class="comparison-image">
+                    <span class="image-label after-label">AFTER</span>
+                    <img src="stair2.jpg" alt="Staircase After">
+                </div>
+            </div>
+            <div class="project-info">
+                <h4>Luxury Staircase & Entrance Renovation</h4>
+                <p>Complete transformation from raw concrete to a sophisticated modern entrance featuring elegant marble flooring, contemporary lighting design, designer wall art, and sleek architectural finishes.</p>
+                <div class="project-details">
+                    <div class="detail-item">
+                        <span class="detail-label">Location:</span>
+                        <span class="detail-value">Doha, Qatar</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Duration:</span>
+                        <span class="detail-value">6 Weeks</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
     <section class="before-after-section">
         <div class="renovation-category">
             <div class="category-title"><h3>🍳 Livingroom Renovations</h3><p>Modern style and functionality</p></div>
