--- a/renovations.html
+++ b/renovations.html
@@ -76,7 +76,7 @@
 
         .before-after-item:hover { transform: translateY(-5px); }
         .comparison-images { display: grid; grid-template-columns: 1fr 1fr; }
-        .comparison-image { position: relative; aspect-ratio: 4/3; }
+        .comparison-image { position: relative; min-height: 300px; }
         .comparison-image img { width: 100%; height: 100%; object-fit: cover; }
 
         .image-label {
